NEXT
    Misc
    * Failure to parse parameters will now produce a more useful error.


20121108.0047_001    Thu Nov  8 00:47:15 PST 2012
    New Features
    * remove dependency on Devel::BeginLift
      [github #39]

20121025.2315_001    Thu Oct 25 23:15:20 PDT 2012
    New Features
    * can now use `when' to specify default conditions
      [github #48]
    * can use `//=' as a shortcut for `when undef'
      [github #45]
    * can now provide `where' constraints in addition to
      (or instead of) a type
      [github #7]
    * can now use `...' to disable further argument checking
      [github #49]
    * can now specify more than one alternative in type unions
      [github #55]
    * can now nest parameterized types

    Incompatible Changes
    * can no longer use both `\' and `:'
      (didn't work anyway)

    Optimizations
    * better signature parsing using PPI
      [github #11]

    Docs
    * documented all new features
    * new ASCI-art breakdown of signature syntax
    * minor tweaks and corrections

20120523    May 23 16:36:04 PDT 2012
    Distribution Fixes
    * Fixed META.json

20120517    Thu May 17 20:14:34 PDT 2012
    Promoted to full release

20120514.0117_001   Mon May 14 01:17:38 PDT 2012
    Distribution Fixes
    * Added version number to Method::Signatures::Modifiers.


20111125    Fri Nov 25 01:15:50 PST 2011
    Optimizations
    * Type checks significantly faster.  40% faster with Mouse.
      20% faster with Moose. [github #42]

    Distribution Fixes
    * Added Test::Exception as a build requirement [github #43]
    * Added Moose as a recommended module (with version number)


20111020  Thu Oct 20 17:00:29 PDT 2011
    Promoted to full release

20111017.2055_002  Mon Oct 17 20:55:09 PDT 2011
    Bug Fix
    * Move inject_if_block code back to MSM [github #40]

20110927.2305_001  Tue Sep 27 23:05:02 PDT 2011
    Bug Fix
    * Remove spurious error for modifiers in roles [github #36]

